Handle invalid media types as client errors
Closes gh-1145